add JS associative array and HTML markup to display

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>Associative Arrays Lab</title>
 </head>
 <body>
+  <input type="button" value="Show Array Values" onclick="displayArray()">
+  <hr>
+  <div id="resultsDiv">
+    <!-- function results here -->
+  </div>
+
+
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
