add to HTML feature button to addToArray

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <input type="button" value="Show Array Values" onclick="displayArray()">
+  <br />
+  <input type="text" id="key" placeholder="Type a string key...">
+  <input type="text" name="value" placeholder="Type any value...">
+  <input type="button" value="Add to Array" onclick="addToArray()">
   <hr>
   <div id="resultsDiv">
     <!-- function results here -->
