--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <input type="button" value="Show Array Values" onclick="displayArray()">
   <br />
   <input type="text" id="key" placeholder="Type a string key...">
-  <input type="text" name="value" placeholder="Type any value...">
+  <input type="text" id="value" placeholder="Type any value...">
   <input type="button" value="Add to Array" onclick="addToArray()">
   <hr>
   <div id="resultsDiv">
